--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,3 +12,5 @@ DATABASE_URL=postgres://user:password@host:5432/dbname
 # Notes:
 # - `db.js` uses `rejectUnauthorized: false` in the SSL config to allow Supabase connections.
 # - Never commit real secrets to the repo. Add `.env` to `.gitignore` if not already ignored.
+
+KEEP_ALIVE_TOKEN=your_secure_keep_alive_token_here
