Updated readme and folder strucutre

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,6 @@
 # Example environment variables for backend
 # Copy this file to `.env` and fill in real values before running the server.
+# Never commit real secrets to the repo. Add `.env` to `.gitignore` if not already ignored.
 
 # Port the Express server listens on
 PORT=5000
@@ -9,8 +10,12 @@ PORT=5000
 # Supabase example: postgres://postgres:password@db.<region>.supabase.co:5432/postgres
 DATABASE_URL=postgres://user:password@host:5432/dbname
 
+# Keep-alive token for health check endpoint
+# Used by GET /api/keep-alive?token=xxx to prevent Supabase idle timeout
+# Set this to a strong random string (e.g., generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))")
+KEEP_ALIVE_TOKEN=your_secure_keep_alive_token_here
+
 # Notes:
 # - `db.js` uses `rejectUnauthorized: false` in the SSL config to allow Supabase connections.
-# - Never commit real secrets to the repo. Add `.env` to `.gitignore` if not already ignored.
-
-KEEP_ALIVE_TOKEN=your_secure_keep_alive_token_here
+# - The keep-alive endpoint is designed for free-tier Supabase to prevent connection idle timeout after 15 minutes.
+# - Call the endpoint periodically (every 14 minutes) from a cron job or external service.
