--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.10.0",
     "chart.js": "^4.5.0",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.468.0",
@@ -20,6 +21,7 @@
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^7.6.2",
+    "tailwind-merge": "^3.4.0",
     "vite": "^7.0.0"
   },
   "devDependencies": {
@@ -34,6 +36,5 @@
     "globals": "^16.2.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.3.5"
-    
   }
 }
